--- a/apViaxar/app/src/main/res/layout/activity_login.xml
+++ b/apViaxar/app/src/main/res/layout/activity_login.xml
@@ -103,7 +103,7 @@
         android:layout_marginBottom="64dp"
         android:background="@drawable/button_lg"
         android:backgroundTint="#1EAAF1"
-        android:enabled="false"
+        android:enabled="true"
         android:text="SIGN IN"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -122,7 +122,7 @@
         android:layout_marginBottom="64dp"
         android:background="@drawable/button_bg"
         android:backgroundTint="#D34A4545"
-        android:enabled="false"
+        android:enabled="true"
         android:text="FORGOT PASSWORD"
         android:textColor="#D34A4545"
         app:layout_constraintBottom_toBottomOf="parent"
