--- a/Viaxar/app/src/main/res/layout/activity_main.xml
+++ b/Viaxar/app/src/main/res/layout/activity_main.xml
@@ -10,23 +10,28 @@
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="177dp"
+        android:layout_height="64dp"
+        android:fontFamily="@font/bukhariscriptttf"
         android:text="Get started"
-        android:textSize="30sp"
+        android:textColor="#686868"
+        android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.101" />
+        app:layout_constraintVertical_bias="0.097" />
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="293dp"
+        android:layout_height="37dp"
+        android:fontFamily="@font/bukhariscriptttf"
         android:text="Start with signing up or sign in!"
-        android:textSize="14sp"
+        android:textColor="#686868"
+        android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
