--- a/Viaxar/app/src/main/res/layout/activity_app.xml
+++ b/Viaxar/app/src/main/res/layout/activity_app.xml
@@ -6,20 +6,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-   >
+    tools:openDrawer="start">
 
-    <include
-        layout="@layout/app_bar_main"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
+        <!--TOOLBAR TOP-->
+       <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" />
+
+        <!--FRAGMENT HOST-->
+        <include layout="@layout/content_main"></include>
+
+        <!--BOTTOM NAV-->
+        <include layout="@layout/activity_menu_bottom"></include>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <!--SIDE MENU-->
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/side_nav_menu"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/side_menu"/>
+
 </androidx.drawerlayout.widget.DrawerLayout>
