--- a/Viaxar/app/src/main/res/menu/bottom_menu.xml
+++ b/Viaxar/app/src/main/res/menu/bottom_menu.xml
@@ -3,29 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/nav_info"
-        android:icon="@drawable/ic_menu_information"
-        android:title="Home" />
+        android:id="@+id/nav_home"
+        android:icon="@drawable/ic_menu_home"
+        android:title="Home"
+        app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/nav_explore"
+        android:icon="@drawable/ic_menu_explore"
+        android:title="Explore"
+        app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/nav_world"
+        android:title=""
+        app:showAsAction="always"/>
+
     <item
         android:id="@+id/nav_fav"
         android:icon="@drawable/ic_menu_favorite"
-        android:title="Explore" />
+        android:title="Favorites"
+        app:showAsAction="always"/>
+
     <item
-        android:id="@+id/nav_kit"
-        android:icon="@drawable/ic_menu_traveler"
-        android:title="Favorites" />
-    <item
-        android:id="@+id/nav_exit"
-        android:icon="@drawable/ic_menu_exit"
-        android:title="Exit"
-        />
-    <item
-        android:id="@+id/nav_menu"
-        android:icon="@android:drawable/ic_menu_help"
-        android:title="menu"
-        />
+        android:id="@+id/nav_info"
+        android:icon="@drawable/ic_menu_information"
+        android:title="Profile"
+        app:showAsAction="always" />
 
 </menu>
 
-    <!-- xmlns:tools="http://schemas.android.com/tools"
+   <!-- xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="@layout/app_bar_main">-->
