--- a/Viaxar/app/src/main/res/menu/side_menu.xml
+++ b/Viaxar/app/src/main/res/menu/side_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
@@ -20,6 +21,7 @@
             android:id="@+id/nav_exit"
             android:icon="@drawable/ic_menu_exit"
             android:title="Exit"
+            app:showAsAction="always"
             />
     </group>
 </menu>
