--- a/Viaxar/app/src/main/res/values/styles.xml
+++ b/Viaxar/app/src/main/res/values/styles.xml
@@ -16,4 +16,7 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.TitleFont" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
+        <item name="android:fontFamily">@font/bukhariscriptttf</item>
+    </style>
 </resources>
