--- a/Viaxar/app/src/main/res/menu/side_menu.xml
+++ b/Viaxar/app/src/main/res/menu/side_menu.xml
@@ -8,7 +8,8 @@
         <item
             android:id="@+id/nav_info"
             android:icon="@drawable/ic_menu_information"
-            android:title="Informations" />
+            android:title="Informations"
+            />
         <item
             android:id="@+id/nav_fav"
             android:icon="@drawable/ic_menu_favorite"
