--- a/Viaxar/app/src/main/res/values/colors.xml
+++ b/Viaxar/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#FFFFFF</color>
     <color name="azul">#1EAAF1</color>
+    <color name="cinzaexplorar"> #EEEEEE</color>
+
 </resources>
